--- a/ReflectionMappingsGenerator.csproj
+++ b/ReflectionMappingsGenerator.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,7 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="FreneticUtilities\**" />
+    <EmbeddedResource Remove="FreneticUtilities\**" />
+    <None Remove="FreneticUtilities\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="FreneticUtilities\FreneticUtilities\FreneticUtilities.csproj" />
   </ItemGroup>
 
 </Project>
